--- a/client/src/CSS/_Navbar.scss
+++ b/client/src/CSS/_Navbar.scss
@@ -7,6 +7,11 @@
       ul {
         li {
           padding: 0.2rem;
+          .active {
+            background: #007bff;
+            color: white;
+            border-radius: 3px;
+          }
         }
         button {
           width: 100%;
