--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -16,29 +16,34 @@ body {
 .row {
   margin: 0;
 }
+.Date{
+  font-family: 'Courier New', Courier, monospace;
+}
 
 .AlertModal {
   position: fixed;
-  height: 40vh;
+  height: 30vh;
   top: 0;
   display: grid;
   grid-template-columns: 100%;
   justify-content: center;
   justify-items: center;
-  align-items: center;
+  align-items: flex-end;
   width: 100%;
   visibility: hidden;
+  transform:translateY(-3rem);
   z-index: -5;
+  margin-top:1rem;
+  opacity:0;
   .AlertModalForm {
-    padding: 2rem;
+    padding: 2rem 2rem 0rem 2rem;
     h2 {
-      font-size: 1.5rem;
-      padding: 1rem 0rem 3rem 0rem;
+      font-size: 1rem;
+      padding: 2rem 0rem 3rem 0rem;
     }
-    width: 40%;
+    width: 35%;
     height: 100%;
     background-color: white;
-    border-radius: 5px;
   }
   .form-row {
     display: grid;
@@ -47,6 +52,9 @@ body {
   }
 }
 .AlertModalOpen {
+  transition: transform 600ms,opacity 600ms 200ms;
+  transform:translateY(0);
+  opacity:1;
   visibility: visible;
   z-index: 5;
 }
