--- a/client/src/CSS/_Items.scss
+++ b/client/src/CSS/_Items.scss
@@ -2,3 +2,18 @@
   width: 50%;
   padding: 1rem 0;
 }
+.Sales{
+  .Search{
+    .DateSearch{
+      display: grid;
+      align-content: center;
+      align-items: center;
+      .Dateform{
+        display: grid;
+        align-content: center;
+        align-items: center;
+        margin-bottom: 0;
+      }
+    }
+  }
+}
