--- a/client/src/App.css
+++ b/client/src/App.css
@@ -176,6 +176,33 @@ body {
 .IndividualInventory {
   padding-top: 1rem;
 }
+.IndividualInventory .returnModal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-content: center;
+  background-color: rgba(76, 56, 255, 0.3);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  display: none;
+}
+.IndividualInventory .returnModal .Modal {
+  width: 50vw;
+  height: 50vh;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 0.4rem;
+}
+.IndividualInventory .returnModal .Modal .closeReturnModal {
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  top: 1rem;
+  right: 4rem;
+}
 .IndividualInventory .head {
   display: grid;
   grid-gap: 1rem;
@@ -194,6 +221,9 @@ body {
 }
 .IndividualInventory .head .borrowform {
   padding: 0 2rem;
+}
+.IndividualInventory .Status {
+  padding: 2rem 0rem;
 }
 
 /*# sourceMappingURL=App.css.map */
