--- a/client/src/CSS/_Inventory.scss
+++ b/client/src/CSS/_Inventory.scss
@@ -12,6 +12,33 @@
 
 .IndividualInventory {
   padding-top: 1rem;
+  .returnModal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    justify-content: center;
+    align-content: center;
+    background-color: rgba($color: #4c38ff, $alpha: 0.3);
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    display: none;
+    .Modal {
+      width: 50vw;
+      height: 50vh;
+      padding: 2rem;
+      background-color: white;
+      border-radius: 0.4rem;
+      .closeReturnModal {
+        color: white;
+        font-size: 2rem;
+        cursor: pointer;
+        position: absolute;
+        top: 1rem;
+        right: 4rem;
+      }
+    }
+  }
   .head {
     display: grid;
     grid-gap: 1rem;
@@ -32,5 +59,8 @@
     .borrowform {
       padding: 0 2rem;
     }
+  }
+  .Status {
+    padding: 2rem 0rem;
   }
 }
