--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.small {
+  font-size: 1rem;
+}
+
 p {
   margin-block-start: 0em;
   margin-block-end: 0em;
@@ -11,6 +15,7 @@ p {
 
 body {
   margin: 0;
+  background-color: #d8d8d8;
 }
 
 .Home {
@@ -108,14 +113,16 @@ body {
   box-sizing: border-box;
   height: 100%;
   padding: 0.5rem 1rem;
+  background-color: #00205c;
+  min-height: calc(100vh - 70px);
 }
 .Navbar nav > div ul li {
   padding: 0.2rem;
 }
 .Navbar nav > div ul li .active {
-  background: #007bff;
-  color: white;
-  border-radius: 3px;
+  color: #0150a5;
+  border-bottom: 1px solid rgba(1, 80, 165, 0.5);
+  box-shadow: 2px 1px 0px 0px rgba(1, 80, 165, 0.5);
 }
 .Navbar nav > div ul button {
   width: 100%;
@@ -138,6 +145,7 @@ body {
 
 .Heading {
   padding: 1rem;
+  z-index: 1;
 }
 .Heading div > h4 {
   color: white;
