--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,12 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+.small {
+  font-size: 1rem;
+}
 p {
   margin-block-start: 0em;
   margin-block-end: 0em;
 }
 body {
   margin: 0;
+  background-color: rgb(216, 216, 216);
 }
 
 .Content {
