--- a/client/src/CSS/_Navbar.scss
+++ b/client/src/CSS/_Navbar.scss
@@ -2,15 +2,17 @@
   box-sizing: border-box;
   height: 100%;
   padding: 0.5rem 1rem;
+  background-color: rgb(0, 32, 92);
+  min-height: calc(100vh - 70px);
   nav {
     > div {
       ul {
         li {
           padding: 0.2rem;
           .active {
-            background: #007bff;
-            color: white;
-            border-radius: 3px;
+            color: #0150a5;
+            border-bottom: 1px solid rgba($color: #0150a5, $alpha: 0.5);
+            box-shadow: 2px 1px 0px 0px rgba($color: #0150a5, $alpha: 0.5);
           }
         }
         button {
