--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: one;
+  src: url("./Fonts/1.otf");
+}
+
+@font-face {
+  font-family: two;
+  src: url("./Fonts/2.ttf");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +21,7 @@ p {
   margin-block-end: 0em;
 }
 body {
+  font-family: two;
   margin: 0;
   background-color: rgb(216, 216, 216);
 }
