--- a/client/src/CSS/_Inventory.scss
+++ b/client/src/CSS/_Inventory.scss
@@ -4,7 +4,12 @@
   grid-gap: 1rem;
   .Inventory {
     width: 100%;
+    height: 20rem;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
@@ -47,7 +52,8 @@
     .image {
       width: 100%;
       img {
-        max-width: 100%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
       }
     }
