Can Remove Custodian, Added Inventories on SuperAdmin, Added Icons, Added Small Functionality on Date Filtering on Reports

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,6 +39,34 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 
+.createdModal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-content: center;
+  background-color: rgba(76, 56, 255, 0.3);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  display: none;
+}
+.createdModal .Modal {
+  width: 50vw;
+  min-height: 50vh;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 0.4rem;
+}
+.createdModal .Modal .closingModal {
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  top: 1rem;
+  right: 4rem;
+}
+
 .AlertModal {
   position: fixed;
   height: 30vh;
@@ -197,33 +225,21 @@ body {
 
 .IndividualInventory {
   padding-top: 1rem;
+  position: relative;
 }
-.IndividualInventory .returnModal {
-  position: fixed;
-  left: 0;
-  top: 0;
-  justify-content: center;
-  align-content: center;
-  background-color: rgba(76, 56, 255, 0.3);
-  width: 100vw;
-  height: 100vh;
-  z-index: 2;
-  display: none;
+.IndividualInventory .Title {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  justify-items: center;
+  align-items: center;
 }
-.IndividualInventory .returnModal .Modal {
-  width: 50vw;
-  height: 50vh;
-  padding: 2rem;
-  background-color: white;
-  border-radius: 0.4rem;
+.IndividualInventory .Title .deleteInventoryButton {
+  display: grid;
+  width: 50%;
+  height: 60%;
 }
-.IndividualInventory .returnModal .Modal .closeReturnModal {
-  color: white;
-  font-size: 2rem;
-  cursor: pointer;
-  position: absolute;
-  top: 1rem;
-  right: 4rem;
+.IndividualInventory .Title h1 {
+  justify-self: flex-start;
 }
 .IndividualInventory .head {
   display: grid;
