--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -38,6 +38,34 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 
+.createdModal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-content: center;
+  background-color: rgba($color: #4c38ff, $alpha: 0.3);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  display: none;
+  .Modal {
+    width: 50vw;
+    min-height: 50vh;
+    padding: 2rem;
+    background-color: white;
+    border-radius: 0.4rem;
+    .closingModal {
+      color: white;
+      font-size: 2rem;
+      cursor: pointer;
+      position: absolute;
+      top: 1rem;
+      right: 4rem;
+    }
+  }
+}
+
 .AlertModal {
   position: fixed;
   height: 30vh;
