--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -23,11 +23,10 @@ p {
 body {
   font-family: two;
   margin: 0;
-  background-color: rgb(216, 216, 216);
 }
 
-.Content {
-}
+/* .Content {
+} */
 .Home {
   padding: 1rem;
 }
