--- a/client/src/CSS/_Login.scss
+++ b/client/src/CSS/_Login.scss
@@ -1,21 +1,32 @@
 .Login {
+  color: black;
   display: grid;
   height: 100vh;
   width: 100%;
+  background: url("./Components/Images/WUPbackground.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   > .Title {
     display: grid;
     align-content: center;
+    letter-spacing: 0.7rem;
     height: 6rem;
     position: fixed;
+    color: white;
+    text-shadow: 4px 8px 8px rgba(0, 0, 0, 0.7);
     width: 100%;
     text-align: center;
   }
   form {
+    background-color: rgba($color: gray, $alpha: 0.3);
     align-self: center;
     justify-self: center;
     width: 40%;
     padding: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: none;
+    color: white;
+    text-shadow: 4px 8px 8px rgba(0, 0, 0, 0.7);
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.2);
   }
 }
