Report State Updating, Deleting Inventory Added, Modifying Added But Not Yet on UI and it isn't still fetched

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,34 +40,6 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 
-.createdModal {
-  position: fixed;
-  left: 0;
-  top: 0;
-  justify-content: center;
-  align-content: center;
-  background-color: rgba(76, 56, 255, 0.3);
-  width: 100vw;
-  height: 100vh;
-  z-index: 2;
-  display: none;
-}
-.createdModal .Modal {
-  width: 50vw;
-  min-height: 50vh;
-  padding: 2rem;
-  background-color: white;
-  border-radius: 0.4rem;
-}
-.createdModal .Modal .closingModal {
-  color: white;
-  font-size: 2rem;
-  cursor: pointer;
-  position: absolute;
-  top: 1rem;
-  right: 4rem;
-}
-
 .AlertModal {
   position: fixed;
   height: 30vh;
@@ -275,6 +247,45 @@ body {
 }
 .IndividualInventory .Status {
   padding: 2rem 0rem;
+}
+
+.createdModal,
+.deleteModalContainer {
+  position: fixed;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-content: center;
+  background-color: rgba(76, 56, 255, 0.3);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  display: none;
+}
+.createdModal .Modal,
+.createdModal .deleteModal,
+.deleteModalContainer .Modal,
+.deleteModalContainer .deleteModal {
+  width: 50vw;
+  min-height: 50vh;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 0.4rem;
+}
+.createdModal .Modal .closingModal,
+.createdModal .Modal .deleteClosingModal,
+.createdModal .deleteModal .closingModal,
+.createdModal .deleteModal .deleteClosingModal,
+.deleteModalContainer .Modal .closingModal,
+.deleteModalContainer .Modal .deleteClosingModal,
+.deleteModalContainer .deleteModal .closingModal,
+.deleteModalContainer .deleteModal .deleteClosingModal {
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  top: 1rem;
+  right: 4rem;
 }
 
 /*# sourceMappingURL=App.css.map */
