--- a/client/src/App.css
+++ b/client/src/App.css
@@ -190,18 +190,18 @@ body {
   margin-bottom: 0;
 }
 
-.Inventories {
+.Inventories .InventoriesContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
 }
-.Inventories .Inventory {
+.Inventories .InventoriesContainer .Inventory {
   width: 100%;
   height: 20rem;
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
-.Inventories .Inventory img {
+.Inventories .InventoriesContainer .Inventory img {
   width: 100%;
   height: 100%;
   object-fit: cover;
