--- a/client/src/CSS/_Inventory.scss
+++ b/client/src/CSS/_Inventory.scss
@@ -1,16 +1,18 @@
 .Inventories {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-  .Inventory {
-    width: 100%;
-    height: 20rem;
+  .InventoriesContainer {
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    img {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+    .Inventory {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: 20rem;
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 }
