--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -80,6 +80,30 @@ body {
     padding: 2rem;
   }
 }
+
+.filter {
+  div {
+    display: inline-block;
+  }
+  div > p {
+    font-size: 0.8rem;
+    font-weight: lighter;
+    font-family: "Courier New", Courier, monospace;
+    display: inline-block;
+    padding-right: 0.2rem;
+    padding-left: 0.1rem;
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
+    opacity: 0.5;
+  }
+  div > h1 {
+    font-size: 1rem;
+    font-weight: normal;
+    display: inline-block;
+    padding-right: 0.2rem;
+    padding-left: 0.4rem;
+    font-family: "Courier New", Courier, monospace;
+  }
+}
 @import "./CSS/_Login.scss";
 @import "./CSS/_Overview.scss";
 @import "./CSS/_Navbar.scss";
