--- a/client/src/CSS/_Modal.scss
+++ b/client/src/CSS/_Modal.scss
@@ -1,5 +1,6 @@
 .createdModal,
-.deleteModalContainer {
+.deleteModalContainer,
+.editModalContainer {
   position: fixed;
   left: 0;
   top: 0;
@@ -11,14 +12,16 @@
   z-index: 2;
   display: none;
   .Modal,
-  .deleteModal {
+  .deleteModal,
+  .editModal {
     width: 50vw;
     min-height: 50vh;
     padding: 2rem;
     background-color: white;
     border-radius: 0.4rem;
     .closingModal,
-    .deleteClosingModal {
+    .deleteClosingModal,
+    .editClosingModal {
       color: white;
       font-size: 2rem;
       cursor: pointer;
