--- a/client/src/App.css
+++ b/client/src/App.css
@@ -188,7 +188,43 @@ body {
 
 .Heading {
   padding: 1rem;
+  max-height: 3.5rem;
   z-index: 1;
+}
+.Heading .accountIconContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.Heading .accountIconContainer img {
+  cursor: pointer;
+  max-width: 100%;
+  max-height: 100%;
+}
+.Heading .accountIconContainer .accountPopover {
+  position: absolute;
+  display: none;
+  padding: 1rem;
+  border-radius: 2px;
+  border: 1px solid black;
+  width: 10rem;
+  top: 2rem;
+  right: 0rem;
+  height: 5rem;
+  z-index: 5;
+  background-color: white;
+}
+.Heading .accountIconContainer .accountPopover ul {
+  margin-bottom: 0;
+}
+.Heading .accountIconContainer .accountPopover ul li {
+  cursor: pointer;
+  list-style: none;
+  text-decoration: none;
+  color: green;
+}
+.Heading .accountIconContainer .accountPopover ul li:hover {
+  color: darkgreen;
 }
 .Heading div > h4 {
   color: white;
