--- a/client/src/CSS/_Heading.scss
+++ b/client/src/CSS/_Heading.scss
@@ -1,6 +1,43 @@
 .Heading {
   padding: 1rem;
+  max-height: 3.5rem;
   z-index: 1;
+  .accountIconContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    img {
+      cursor: pointer;
+      max-width: 100%;
+      max-height: 100%;
+    }
+    .accountPopover {
+      position: absolute;
+      display: none;
+      padding: 1rem;
+      border-radius: 2px;
+      border: 1px solid black;
+      width: 10rem;
+      top: 2rem;
+      right: 0rem;
+      height: 5rem;
+      z-index: 5;
+      background-color: white;
+      ul {
+        margin-bottom: 0;
+        li {
+          &:hover {
+            color: darkgreen;
+          }
+          cursor: pointer;
+          list-style: none;
+          text-decoration: none;
+          color: green;
+        }
+      }
+    }
+  }
+
   div {
     > h4 {
       color: white;
