--- a/client/src/CSS/_Inventory.scss
+++ b/client/src/CSS/_Inventory.scss
@@ -1,5 +1,4 @@
 .Inventories {
-  
   .InventoriesContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -44,6 +43,7 @@
     .image {
       width: 100%;
       img {
+        cursor: pointer;
         width: 100%;
         height: 100%;
         object-fit: cover;
