--- a/client/src/CSS/_Modal.scss
+++ b/client/src/CSS/_Modal.scss
@@ -1,5 +1,6 @@
 .createdModal,
 .deleteModalContainer,
+.galleryModalContainer,
 .editModalContainer {
   position: fixed;
   left: 0;
@@ -13,6 +14,7 @@
   display: none;
   .Modal,
   .deleteModal,
+  .galleryModal,
   .editModal {
     width: 50vw;
     min-height: 50vh;
@@ -21,6 +23,7 @@
     border-radius: 0.4rem;
     .closingModal,
     .deleteClosingModal,
+    .galleryClosingModal,
     .editClosingModal {
       color: white;
       font-size: 2rem;
@@ -28,6 +31,26 @@
       position: absolute;
       top: 1rem;
       right: 4rem;
+    }
+  }
+  .galleryModal {
+    width: 80vw;
+    height: 80vh;
+    .photoGallery {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 1rem;
+      .image {
+        width: 100%;
+        border-radius: 5px;
+        border: 1px solid black;
+        padding: 1rem;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
     }
   }
 }
