--- a/client/src/CSS/_Modal.scss
+++ b/client/src/CSS/_Modal.scss
@@ -35,20 +35,37 @@
   }
   .galleryModal {
     width: 80vw;
-    height: 80vh;
+    min-height: 80vh;
+    overflow: scroll;
     .photoGallery {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 1rem;
-      .image {
-        width: 100%;
-        border-radius: 5px;
-        border: 1px solid black;
-        padding: 1rem;
-        img {
+      grid-template-rows: 85% 15%;
+      width: 100%;
+      .Images {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 1rem;
+        .image {
+          position: relative;
           width: 100%;
-          height: 100%;
-          object-fit: cover;
+          border-radius: 5px;
+          border: 1px solid black;
+          padding: 1rem;
+          .cover {
+            cursor: pointer;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            opacity: 0;
+            background-color: black;
+          }
+          img {
+            width: 100%;
+            object-fit: cover;
+          }
         }
       }
     }
