--- a/client/src/CSS/_Modal.scss
+++ b/client/src/CSS/_Modal.scss
@@ -68,6 +68,12 @@
           }
         }
       }
+      .buttons {
+        button {
+          height: 2rem;
+          margin-right: 1rem;
+        }
+      }
     }
   }
 }
